# pyRetroProtocols

./: .gitignore  Dockerfile  SESSION_SUMMARY.md  opencode.json  rzaio.py  szaio.py
archive/: README.md
archive/debug_tests/: test_crc2.py  test_crc3.py  test_crc4.py  test_crc5.py  test_crc_compare.py  test_crc_zfile2.py  test_crc_zfile3.py  test_crc_zfile_dropped_s.py  test_log_sz.py  test_match.py  test_printable_zdle2.py  test_printable_zdle3.py  test_printable_zdle4.py  test_printable_zdle5.py  test_pyz_origin.py  test_re.py  test_rx.py  test_stream.py  test_stripping.py  test_utf8.py  test_zdle.txt  test_zdle_printable.py
archive/misc/: dgdg.py  dummy_file2.txt  szaio_wrapper.py  test_mcp.py  test_tools.py  uuencode_sed
archive/session_artifacts/: runme_notes.md  session_receipt.jsonl  sse_raw.txt
crates/pyprotocols-core/: Cargo.toml  pyproject.toml
crates/pyprotocols-core/src/: crc.rs  file_safety.rs  framer.rs  lib.rs  transport.rs
crates/pyprotocols-core/src/protocols/: hslink.rs  mod.rs  wslink.rs  zmodem.rs
docs/status/: STATUS.md
hslink/: SPECIFICATIONS.md  hr.py  hx.py  tools.py  transport.py
hslink/protocol/: framer.py  hslink.py
modem/: tools.py
protocols/common/: __init__.py  file_safety.py
protocols/hslink/: const.py  error.py  hs.py  hx.py  tools.py  transport.py
protocols/zmodem/: rz.py  sz.py
pyzmodem/: rz.py  sz.py
pyzmodem/modem/: const.py
rzsz/: README.md  SESSION_HANDOVER.md  TODO.md  build_aio.py  rz.py  rzaio.py  sz.py  szaio.py
rzsz/modem/: utf8.py
rzsz/utils/: build_aio.py
utils/: make_aio.py  make_hsaio.py
(+42 files in other folders)
