[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyprotocols-core"
version = "1.0.0"
description = "High-performance file transfer protocol core (Rust + PyO3)"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py39"]
python-source = "python"
module-name = "pyprotocols_core"
